# rt-rs

./: .editorconfig  .gitignore  Cargo.toml  FEATURES.md  README.md  TODO.md  circle.yml  run.sh
scenes/: aa-test.scene  all-shapes.scene  basic.scene  closed-tessellation.scene  cloth-test.scene  cube-mapping.scene  difference-test.scene  glass-killeroo.scene  gourard.scene  handedness.scene  helices.scene  killeroo.scene  lens-concave.scene  lens-cube.scene  lens-scaled-sphere.scene  measured-killeroo.scene  refraction.scene  shuttle.scene  space.scene  sphere.scene  spheres.scene  stuff.scene  tessellated-spheres.scene  tessellated_spheres.scene  topo-earth.scene  topo_earth.scene  uv.scene
scenes/bench/: sphere-tessellation.scene
scenes/common/: common.scene  lens-test.scene  materials.scene  space-materials.scene  textures.scene
scripts/: run.sh  test.sh
src/: builder.rs  bxdf.rs  color.rs  external_crate_traits.rs  file_utils.rs  image_utils.rs  main.rs  material.rs  objects.rs  parser.lalrpop  progress_bar.rs  renderer.rs  sampler.rs  samples.rs  scene.rs  test.rs  test_utils.rs  transform.rs  util.rs  vector.rs
src/bxdf/: bsdf.rs  bxdf.rs  bxdf_trig.rs  lambertian.rs  measured.rs  mod.rs  perfect_specular_reflection.rs  perfect_specular_transmission.rs  util.rs
src/core/: bounding_box.rs  bsdf.rs  bxdf.rs  camera.rs  color.rs  geometry.rs  image_texture.rs  intersection.rs  kd_tree.rs  light.rs  material.rs  mod.rs  point_kd_tree.rs  ray.rs  render_parameters.rs  scene.rs  scene_object.rs  shape.rs  texture.rs  transform.rs  uv.rs  volume_kd_tree.rs
(+66 files in other folders)
