[package]
name = "rt-rs"
version = "0.1.0"
authors = ["Sean Kelley <seansfkelley@gmail.com>", "Kevin Verdieck <kevinverdieck@gmail.com>"]
exclude = [ "/scenes/*", "/scripts/*", "out/*" ]

[profile.release]
debug = true

[build-dependencies]
lalrpop = "0.13.1"

[dependencies]
image = "0.17.0"
rand = "0.3.17"
lalrpop-util = "0.13.1"
regex = "0.2.1"
lazy_static = "0.2.9"
terminal_size = "0.1.7"
ordered-float = "0.5.0"
lazysort = "0.2.0"
